* fixed z-index of 'side-handle'.  * ajusted style of 'admin/index'.

--- a/www/theme/default/style.css
+++ b/www/theme/default/style.css
@@ -492,7 +492,7 @@ body {font-size: 13px; color:#141414;padding-bottom: 40px;}
 .outer .side-body {overflow: hidden;}
 .outer .side-body .panel {min-width: 180px;}
 .outer .side-body .panel-body {padding: 10px;}
-.outer .side-handle {position: absolute; text-align: center; cursor: pointer; right: 0; top: 0; width: 15px; padding: 0; line-height: 32px; border: 1px solid #d5d5d5; background: #fff; color: #666; transition: all 0.3s;}
+.outer .side-handle {position: absolute; text-align: center; cursor: pointer; right: 0; top: 0; width: 15px; padding: 0; line-height: 32px; border: 1px solid #d5d5d5; background: #fff; color: #666; transition: all 0.3s; z-index: 99}
 .outer .side-handle:hover {background: #e5e5e5; color: #141414}
 .outer.with-transition .side, .outer .side-handle.with-transition {transition: all 0.3s;}
 
